2005-03-23  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Fix this up after the last change.

2005-03-23  Martin Baulig  <martin@ximian.com>

	* TypeBuilderTest.cs (TestIsAssignableTo_NotDotNet): Put this
	whole method into the "NotWorking" category.

2005-03-23  Martin Baulig  <martin@ximian.com>

	* TypeBuilderTest.cs: Disable last test again since the bug report
	is reopened.

2005-03-21  Nick Drochak <ndrochak@ieee.org>

	* TypeBuilderTest.cs: Move asserts which fail on .NET to a new
	test method and disable it on .NET.

2005-03-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Reenable last test.

2005-03-09  Marek Safar  <marek.safar@seznam.cz>

	* ILGeneratorTest.cs: New test file.

2005-03-09  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Disable last test since the fix is reverted.

2005-03-08  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Add new test.

2005-02-11  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Add tests for IsAssignableFrom.

2004-01-31  Nick Drochak <ndrochak@ieee.org>

	* TypeBuilderTest.cs: Put "NotWorking" on failing tests for mono.

2004-01-30  Nick Drochak <ndrochak@ieee.org>

	* ModuleBuilderTest.cs: Avoid path length exceptions on Windows.

2004-11-22  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyBuilderTest.cs: Add regression test for bug #69780.

2004-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Ignore some tests which depend on TypeBuilder
	features which are unlikely to change due to mcs depending on them.

2004-11-05  Zoltan Varga  <vargaz@freemail.hu>

	* EnumBuilderTest.cs: Remove test that depends on the exact format
	of AssemblyName.FullName.

2004-11-04  Zoltan Varga  <vargaz@freemail.hu>

	* TypeBuilderTest.cs: Add a TypeResolve test. Remove a test which
	depends on exception ordering.

2004-10-05  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBuilderTest.cs: Add tests for default values for parameters.
