@@ -1,3 +1,7 @@
+2005-03-24  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* MethodRentalCas.cs: New. CAS unit tests for MethodRental.
+
 2005-03-23  Zoltan Varga  <vargaz@freemail.hu>
 
 	* TypeBuilderTest.cs: Fix this up after the last change.
